# DigitalGeometry

Documents/FinalQualifyingWork/: Implementation_of_various_numerical_schemes_for_solving_the_transport_equation.tex
Documents/FinalQualifyingWork/Diploma/: Implementation_of_various_numerical_schemes_for_solving_the_transport_equation.tex
Documents/FinalQualifyingWork/Diploma/Files/: error.txt
Documents/FinalQualifyingWork/Presentation/: FinalQualifyingWorkNoAnimation.pptx  Speech.txt
Documents/FinalQualifyingWork/Presentation/Pictures/: DG.blend  DG.blend1  FEM.blend  FEM.blend1
Documents/Notes/: Numerical_solution_of_Transport_Equation_with_nonstatic_velocity_field.tex
Documents/PreviousWorks/Курсовая работа 4 курс/: .~lock.Численное решение уравнения переноса.docx#  Численное решение уравнения переноса.docx
Documents/PreviousWorks/Курсовая работа 4 курс/Notes/: otzuv_cursov_Сенченок2020.docx  Постановка задачи.docx
Documents/PreviousWorks/Курсовая работа 5 курс/: .~lock.Применение различных схем для численного решения уравнения переноса.docx#  Применение различных схем для численного решения уравнения переноса.docx
Documents/PreviousWorks/Курсовая работа 5 курс/Notes/: THINC.docx  Отзыв на курсовую работу.doc
Programs/DGVisualization/JupyterResearch/: Area1DVisualizer.py  FileUtils.py  FoldersConfig.py  TE1DOutput.py  TE1DPlot.py  TE1DTests.py  TE2DOutput.py  TE2DPlot.py  TE2DTests.py  TE2DVisualization.ipynb  TransportEquation2DVisualizer.ipynb  configs.py  main.py
Programs/Output/CalculationResults/: .gitignore
Programs/TransportEquation/: .gitignore  CMakeLists.txt  CompilerDifferenceHighlighter.cpp  InterpolationFunctions.cpp  InterpolationFunctions.h  THINC1D.cpp  THINC1D.h  THINC1DOutput.txt  main.cpp
Programs/TransportEquation/source/: configs.cpp  configs.h  main.cpp
Programs/TransportEquation/source/DGProblem/DGSolver1D/: DGSolver1D.cpp  DGSolver1D.h  DGSolver1DParams.cpp  DGSolver1DParams.h
Programs/TransportEquation/source/DGProblem/DGSolver2D/: DGSolver2D.cpp  DGSolver2D.h  DGSolver2DOutput.cpp  DGSolver2DOutput.h  DGSolver2DParams.cpp  DGSolver2DParams.h
Programs/TransportEquation/source/DGProblem/Tools/: VectorFieldCalculation.cpp  VectorFieldCalculation.h
Programs/TransportEquation/source/EulerEquationProblem/EESolver1D/: EESolver1D.cpp  EESolver1D.h  EESolver1DInstances.cpp  EESolver1DInstances.h  EESolver1DParams.cpp  EESolver1DParams.h
Programs/TransportEquation/source/EulerEquationProblem/EESolver2D/: EESolver2D.cpp  EESolver2D.h  EESolver2DOutput.cpp  EESolver2DOutput.h  EESolver2DParams.cpp  EESolver2DParams.h
Programs/TransportEquation/source/EulerEquationProblem/Tools/: IntegrationTools.cpp  IntegrationTools.h
Programs/TransportEquation/source/Tests/: DigitalGeometryTests1D.cpp  DigitalGeometryTests1D.h  DigitalGeometryTests2D.cpp  DigitalGeometryTests2D.h  EulerEquation1Dtests.cpp  EulerEquation1Dtests.h  EulerEquation2Dtests.cpp  EulerEquation2Dtests.h  StandardSolver.cpp  StandardSolver.h  Tests.cpp  Tests.h  TransportEquation1Dtests.cpp  TransportEquation1Dtests.h  TransportEquation2Dtests.cpp  TransportEquation2Dtests.h
Programs/TransportEquation/source/TransportEquationSolver/: InterpolationFunctions.cpp  InterpolationFunctions.h  THINC1D.cpp  THINC1D.h  THINC1DparamsStruct.h  THINCUtils.cpp
Programs/TransportEquation/source/TransportEquationSolver/Instances/: Area1D.h  Area2D.h  RBVectorField1D.cpp  RBVectorField1D.h  RBVectorField2D.cpp  RBVectorField2D.h  TESolver1DInstances.cpp  TESolver1DInstances.h  VectorField1D.h  VectorField2D.cpp  VectorField2D.h
Programs/TransportEquation/source/TransportEquationSolver/Methods/: ContinuousRBFlow.h  ContinuousSolidFlow.h  Flow.h  FlowMachine.h  GRBState.cpp  GRBState.h  GSFlow.h  GSQuantity.h  GasSolidFlow.h  GasSolidFlowMachine.h  GodunovFlow.h  MUSCLFlow.h  Mesh.cpp  Mesh.h  OverEdgeFlow.h  PostProcessors.cpp  PostProcessors.h  Quantity.cpp  Quantity.h  RBFlow.h  RBState.h  SFlow.h  SQuantity.h  SolidFlowMachine.h  TimeStepVelocity.h  TimeTransportVelocity.h  TransportVelocity.h  Velocity.h  VolumeFraction.h
Programs/TransportEquation/source/TransportEquationSolver/Solver1D/: Area1D.cpp  Area1D.h  Cell1D.h  Solver1D.cpp  Solver1D.h  Solver1DInstances.cpp  Solver1DInstances.h  Solver1DOutput.cpp  Solver1DOutput.h  Solver1DParams.cpp  Solver1DParams.h  Solver1DParamsStruct.h  TERBJRSolver1D.cpp  TERBJRSolver1D.h  TERBSolver1D.cpp  TERBSolver1D.h  TESolver1D.cpp  TESolver1D.h  TESolver1DOutput.cpp  TESolver1DOutput.h  TESolver1DParams.h  THINC1D.cpp  THINC1D.h  THINC1DparamsStruct.h  VectorField1D.cpp  VectorField1D.h
Programs/TransportEquation/source/TransportEquationSolver/Solver2D/: Area2D.h  PsyScalar.h  PsyScalarUtils.cpp  PsyScalarUtils.h  Solver2D.cpp  Solver2D.h  Solver2DInstances.cpp  Solver2DInstances.h  Solver2DOutput.cpp  Solver2DOutput.h  Solver2DparamsStruct.h  TERBJRSolver2D.cpp  TERBJRSolver2D.h  TERBSolver2D.cpp  TERBSolver2D.h  TESolver2D.cpp  TESolver2D.h  TESolver2DOutput.cpp  TESolver2DOutput.h  TESolver2DParams.cpp  TESolver2DParams.h  VectorField2D.h  World2D.cpp  World2D.h
Programs/TransportEquation/source/TransportEquationSolver/Tools/: InterpolationFunctions.cpp  InterpolationFunctions.h  JRUtils.cpp  JRUtils.h  RiemannProblem.cpp  RiemannProblem.h  THINCUtils.cpp  THINCUtils.h
Programs/TransportEquation/source/UnitTests/: UnitTestsLauncher.cpp  UnitTestsLauncher.h
Programs/TransportEquation/source/UnitTests/TransportEquationSolver/Methods/: UTMesh.cpp  UTMesh.h  UTQuantity.cpp  UTQuantity.h  UTRBStateFlow.cpp  UTRBStateFlow.h  UTSQuantityFlow.cpp  UTSQuantityFlow.h
Programs/TransportEquation/source/UnitTests/math/: UTVector.cpp  UTVector.h
Programs/TransportEquation/source/Utils/: ArrayUtils.cpp  ArrayUtils.h  FileUtils.cpp  FileUtils.h  Logger.h  TimeLogger.cpp  TimeLogger.h
Programs/TransportEquation/source/math/: Constants.h  MathUtils.cpp  MathUtils.h  Vector.h  Vector2D.h  Vector3D.h  VectorField2D.h  VectorMeshTools.cpp  VectorMeshTools.h  VectorPrefabs.cpp  VectorPrefabs.h
(+5 files in other folders)
